# camera-interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  archonserver.cfg  astrocam.cfg  cameraserver.cfg
.github/: CODEOWNERS  install-deps.sh  workflows
.github/workflows/: cmake-single-platform.yml  cmake-workflow.yml  emulator-integration.yml  install-deps.sh  update-submodules.yml
ARC/: CMakeLists.txt
ARC/CArcBase/: CMakeLists.txt
ARC/CArcBase/inc/: CArcBase.h  CArcBaseDllMain.h  CArcStringList.h
ARC/CArcBase/src/: CArcBase.cpp  CArcBaseDllMain.cpp  CArcStringList.cpp
ARC/CArcDevice/: CMakeLists.txt
ARC/CArcDevice/inc/: ArcDefs.h  ArcDeviceCAPI.h  ArcOSDefs.h  AstroPCIeGUID.h  CArcDevice.h  CArcDeviceDllMain.h  CArcLog.h  CArcPCI.h  CArcPCIBase.h  CArcPCIe.h  CConIFace.h  CExpIFace.h  CooExpIFace.h  PCIRegs.h  Reg9056.h  TempCtrl.h  astropciGUID.h
ARC/CArcDevice/src/: ArcDeviceCAPI.cpp  ArcOSDefs.cpp  CArcDevice.cpp  CArcDeviceDllMain.cpp  CArcLog.cpp  CArcPCI.cpp  CArcPCIBase.cpp  CArcPCIe.cpp  TempCtrl.cpp
ARC/CArcFitsFile/: CMakeLists.txt
ARC/CArcFitsFile/inc/: ArcFitsFileCAPI.h  CArcFitsFile.h  CArcFitsFileDllMain.h
ARC/CArcFitsFile/src/: ArcFitsFileCAPI.cpp  CArcFitsFile.cpp  CArcFitsFileDllMain.cpp
Config/: archon_emulator.cfg  astrocam.cfg  cameraserver.cfg  cryoscope.acf  cryoscope_100us.acf  cryoscope_modified_a_bunch_of_voltages.acf  cryoscope_new.acf  cryoscope_turbo_mode_test.acf  elijah_test.acf  elijah_throwaway.acf  fei-atc-video.acf  fixed_VCPU_freerun.acf  freerun.acf  freerun2.acf  h2rg_hispec.cfg  hispec_cryoscope.acf  hispecatc.acf  hispecatc.cfg  hispecatc_ashley.cfg  nirc2.cfg  test.cfg
Config/cryoscope/: cryoscope.acf  cryoscope.cfg
Config/demo/: demo.acf  demo.cfg  demo.system
Python/: calcmcds.py  pyhelper.h  readfits.py
camerad/: CMakeLists.txt  archon.cpp  archon.h  archon_controller.cpp  archon_controller.h  archon_exposure_modes.cpp  archon_exposure_modes.h  archon_exposure_modes_rxrv.cpp  archon_interface.cpp  archon_interface.h  archon_interface_factory.cpp  astrocam.cpp  astrocam.h  astrocam_controller.cpp  astrocam_controller.h  astrocam_deinterlace.h  astrocam_deinterlace_impl.h  astrocam_exposure_modes.cpp  astrocam_exposure_modes.h  astrocam_interface.cpp  astrocam_interface.h  astrocam_interface_factory.cpp  bob_interface.cpp  bob_interface.h  camera.cpp  camera.h  camera_information.h  camera_interface.cpp  camera_interface.h  camera_server.cpp  camera_server.h  camerad.cpp  camerad.h  common.cpp  common.h  deinterlace_modes.cpp  deinterlace_modes.h  deinterlace_nirc2.cpp  exposure_modes.h  fits.h  (+22 more)
camerad/Instruments/cryoscope/: cryoscope.cmake  cryoscope_exposure_modes.cpp  cryoscope_exposure_modes.h  cryoscope_instrument.cpp  cryoscope_instrument.h  cryoscope_interface_factory.cpp
camerad/Instruments/hispec/: hispec.cmake  hispec_exposure_modes.cpp  hispec_exposure_modes.h  hispec_instrument.cpp  hispec_instrument.h  hispec_interface_factory.cpp
camerad/image-output/: image-output-factory.cpp  image-output-factory.h  image-output.h
ci/: install-deps.sh
cmake/: FindCCfits.cmake  FindCCfits.cmake~  Findcfitsio.cmake  Findcfitsio.cmake~
common/: CMakeLists.txt  camerad_commands.h  common.cpp  common.h
emulator/: .emulator-archon.cpp.swp  CMakeLists.txt  a.out  aaaaaa  c.cpp  check.cpp  emulator-archon.cpp  emulator-archon.h  emulator-server.cpp  emulator-server.h  frame_source.h  generic.h  image_info_base.h  nirc2.h
include/: .gitignore  arc64.h  arc66.h  archon.h  astrocam.h  common.h  config.h  config.h.in  daemonize.h  emulator-archon.h  emulator-server.h  fits.h  logentry.h  logentry.h.in  network.h  newlogentry.h  server.h  tcplinux.h  utilities.h
src/: arc64.cpp  arc66.cpp  archon.cpp  astrocam.cpp  common.cpp  emulator-archon.cpp  emulator-server.cpp  logentry.c  logentry.cpp  network.cpp  newlogentry.cpp  server.cpp  tcplinux.c  utilities.cpp
tests/: CMakeLists.txt  utility_tests.cpp
utils/: CMakeLists.txt  TimingStats.h  build_date.h  cadence_gate.cpp  cadence_gate.h  config.h  daemonize.h  fits.h  fits_writer.cpp  fits_writer.h  frame_output.h  frame_output_factory.cpp  frame_output_factory.h  listener.c  listener.cpp  logentry.cpp  logentry.h  md5.c  md5.cpp  md5.h  network.cpp  network.h  sendcmd.c  sendcmd.cpp  shared_memory_writer.cpp  shared_memory_writer.h  timing_stats.h  utilities.cpp  utilities.h
